# online_store

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
html/: catalog.html  category.html  contacts.html  main.html
htmlcov/: class_index.html  function_index.html  index.html  main_py.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_base_product_py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_exceptions_py.html  z_145eef247bfb46b6_lawn_grass_py.html  z_145eef247bfb46b6_order_py.html  z_145eef247bfb46b6_print_mixin_py.html  z_145eef247bfb46b6_product_iterator_py.html  z_145eef247bfb46b6_product_py.html  z_145eef247bfb46b6_smartphone_py.html  z_145eef247bfb46b6_utils_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_base_product_py.html  z_a44f0ac069e85531_test_category_py.html  z_a44f0ac069e85531_test_lawn_grass_py.html  z_a44f0ac069e85531_test_order_py.html  z_a44f0ac069e85531_test_print_mixin_py.html  z_a44f0ac069e85531_test_product_iterator_py.html  z_a44f0ac069e85531_test_product_py.html  z_a44f0ac069e85531_test_smartphone_py.html  z_a44f0ac069e85531_test_units_py.html
src/: Product.py  Smartphone.py  base_product.py  category.py  exceptions.py  lawn_grass.py  order.py  print_mixin.py  product.py  product_iterator.py  smartphone.py  utils.py  web.py
tests/: conftest.py  test_base_product.py  test_category.py  test_lawn_grass.py  test_order.py  test_print_mixin.py  test_product.py  test_product_iterator.py  test_smartphone.py  test_units.py
